# mqtt2postgres-subscriber

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  FORKNOTE.md  README.md  compose.yml  pyproject.toml
config/: example-postgres-cert.json  example-postgres-password.json
deployments/mqtt-sub/mqtt_ingest_messages/: compose.yml
docs/: configuration.md  local-usage.md  overview.md
src/mqtt2postgres_subscriber/: __init__.py  __main__.py  cli.py  client.py  logging.py  models.py  runtime.py  settings.py
tests/: test_runtime.py  test_settings.py
